tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_53.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               x := (((- (- 0)) DIV ((200 DIV 1223) DIV (+ 1))) DIV (((200 + y) * (2 DIV x)) - ((2 + 200) + (2 MOD y))));
               z := (+ ((+ (- 1)) + ((y - 200) - (- 200))));
               y := (+ (((z - 0) - (2 + 1)) + ((1223 MOD y) DIV (z DIV 0))));
  (* error *)  r := ((((r + y) * (y - x)) + ((+ 1223) * (200 * 1))) > (((+ 2) MOD (2 * 200)) * (+ (+ 0))));
               y := (- (+ ((+ x) * (0 - y))));
               p := ((((z MOD 1) + (- z)) DIV (- (2 * y))) # (((1 - 1) - (x + x)) DIV ((+ 0) + (+ 1))));
               p := ((((y DIV 1) DIV (200 - z)) MOD ((+ 1223) * (z - y))) >= (- ((1 + 0) + (x - 1))));
               q := ((((- 1) + (200 MOD 200)) + ((x + 0) DIV (2 MOD x))) # ((- (y - 2)) + ((z MOD 1) * (+ z))));
               y := (- ((- (- 1)) MOD ((1 DIV z) * (y + 0))));
               x := ((((1223 DIV 1223) * (2 - 1223)) MOD ((1223 MOD y) - (+ y))) + (((y - 200) MOD (- y)) - ((0 MOD z) DIV (2 DIV y))))
END Test14.